Fixing Starting Files

--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
     www 🎲 App Brewery 🎲 com
 </footer>
 
-<script src="index.js" charset="utf-8"></script>
+<script src="dicee.js" charset="utf-8"></script>
 
 </html>
